# justlog

./: .gitignore  CLAUDE.md  LICENSE  README.md  publish.sh  pyproject.toml
src/justlog/: __init__.py  apps.py  db_handler.py  django_integration.py  django_views.py  log.py  middleware.py  models.py
src/justlog/migrations/: 0001_initial.py
test_django_project/: check_integration.py  db.sqlite3  debug_inject.py  test_logging.py
test_django_project/testsite/: asgi.py  settings.py  urls.py  wsgi.py
