
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "justlog"
version = "0.1.1"
authors = [
    {name = "Your Name", email = "hp@harmsen.nl"},
]
description = "A defaults included wrapper to Python's logger"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
keywords = ["logging", "logger", "log", "rotating", "file", "handler"]

[project.urls]
Homepage = "https://github.com/hpharmsen/justlog"
"Source" = "https://github.com/hpharmsen/justlog"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
